--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   ],
   "require": {
-    "shopware/storefront": "^6.5"
+    "shopware/storefront": ">=6.6.10.0 <6.7"
   },
   "license": "MIT",
   "autoload": {
